making player methods easier to explain

--- a/game-test-notebook.ipynb
+++ b/game-test-notebook.ipynb
@@ -67,6 +67,7 @@
     "        self.board = np.zeros(shape=(size,size))\n",
     "        self.team = [[],[]]\n",
     "        self.index = [0,0]\n",
+    "        self.size = size\n",
     "\n",
     "\n",
     "    def get_unit(self, position: Coord) -> int:\n",
@@ -107,14 +108,16 @@
     "        enemy_ind = enemy.index(min(enemy))\n",
     "        \n",
     "        # get coordinates\n",
-    "        return Coord(enemy_team[enemy_ind])\n",
+    "        x, y = enemy_team[enemy_ind]\n",
+    "    \n",
+    "        return Coord(x ,y)\n",
     "    \n",
     "\n",
     "    def swap(self, position1, position2):\n",
     "        self.board[position1], self.board[position2] = self.board[position2], self.board[position1]  \n",
     "        return   \n",
     "\n",
-    "    def move_character(self, position: Coord, direction: str, units: int) -> None:\n",
+    "    def move_character(self, position: Coord, direction: str, units: int) -> Coord:\n",
     "        # player_val = self.board[position]\n",
     "        for _ in range(units):\n",
     "            pos_x = position.x\n",
@@ -139,12 +142,21 @@
     "            else: \n",
     "                break\n",
     "\n",
-    "    def move_phase(self, position: Coord, enemy_pos: Coord,  id_int: int):\n",
+    "            return position\n",
     "\n",
+    "    def move_phase(self, position: Coord, enemy_pos: Coord,  id_int: int) -> Coord:\n",
     "\n",
+    "        # move left or right\n",
+    "        if enemy_pos.x != position.x:\n",
+    "            return self.move_character(position, \"left\") if enemy_pos.x < position.x else \\\n",
+    "            self.move_character(position, \"right\")\n",
+    "        elif enemy_pos.y != position.y:\n",
+    "        # otherwise, move up or down\n",
+    "            return self.move_character(position, \"down\") if enemy_pos.y < position.y else \\\n",
+    "            self.move_character(position, \"up\")\n",
     "\n",
-    "        if enemy_pos.x != position.x \n",
-    "            self.move_character\n",
+    "        # otherwise do nothing\n",
+    "\n",
     "\n",
     "    \n",
     "\n",
@@ -155,18 +167,20 @@
     "        \n",
     "        enemy_pos = self.get_closest_enemy(position,team)\n",
     "        \n",
-    "        if enemy_pos[0]!=position[0]:\n",
-    "            new_pos = (position[0]+[1,-1][position[0]>enemy_pos[0]],position[1])\n",
-    "        elif enemy_pos[1]!=position[1]: \n",
-    "            new_pos = (position[0], position[1]+[1,-1][position[1]>enemy_pos[1]])\n",
-    "        else:\n",
-    "            new_pos = position\n",
-    "        if self.board[new_pos] != 0:\n",
-    "            new_pos = position\n",
-    "        else:\n",
-    "            self.board[position] = 0\n",
-    "            # tank unit will be displayed on the board by number 3\n",
-    "            self.board[new_pos] = [1,-1][team]*4\n",
+    "        new_pos = self.move_phase(position, enemy_pos)\n",
+    "\n",
+    "        # if enemy_pos[0]!=position[0]:\n",
+    "        #     new_pos = (position[0]+[1,-1][position[0]>enemy_pos[0]],position[1])\n",
+    "        # elif enemy_pos[1]!=position[1]: \n",
+    "        #     new_pos = (position[0], position[1]+[1,-1][position[1]>enemy_pos[1]])\n",
+    "        # else:\n",
+    "        #     new_pos = position\n",
+    "        # if self.board[new_pos] != 0:\n",
+    "        #     new_pos = position\n",
+    "        # else:\n",
+    "        #     self.board[position] = 0\n",
+    "        #     # tank unit will be displayed on the board by number 3\n",
+    "        #     self.board[new_pos] = [1,-1][team]*4\n",
     "        \n",
     "        # ACTION PHASE: killed smth, didn't kill smth, or can't kill smth\n",
     "        enemy = []\n",
