added a comment about y

--- a/cost_maker.ipynb
+++ b/cost_maker.ipynb
@@ -19,7 +19,8 @@
     "df = pd.read_csv('results/results_100_10000.csv', header=None)\n",
     "results = df.to_numpy()\n",
     "X=results[:100,:-1]\n",
-    "y=(results[:100,-1]-0.5)*10"
+    "y=(results[:100,-1]-0.5)*10 # this is currently linear\n",
+    "# may want to make y exponential or logarithmic"
    ]
   },
   {
